--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,18 @@
-* {
+:root{
+    --dark:#261420;
+    --mauve:#a65858;
+    --berry:#bf5669;
+    --peach:#F28E85;
+    --pink:#f2bbbb;
+    --
+}
 
+* {
+background-color:var(--pink);
+color:var(--dark)
     
+}
+
+nav {
+ 
 }
