--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
 :root{
-    --dark:#261420;
+    --dark:#422f47;
     --mauve:#a65858;
     --berry:#bf5669;
     --peach:#F28E85;
-    --pink:#f2bbbb;
+    --pink: #f8dcdc;
+    --pink2: #f2bbbb;
     --grad:linear-gradient(to right var(--peach), var(--berry))
 }
 
@@ -14,23 +15,54 @@ color:var(--dark);
 box-sizing:border-box;    
 }
 
+html {
+    scroll-behavior: smooth;
+}
+body{
+    font-family: Courier, monospace;
+}
 header{
-    padding:60px;
-    text-align:center;
-}
-header img{
-   display:flexbox;
-   width:35%;
-   /* border:5px solid var(--berry); */
-   justify-content:center;
-}
+    display:flexbox;
+    padding-top:60px;
+    /* text-align:center; */
+    font-size: 50px;
+    font-family: 'brush script MT', Courier, monospace;
+    }
 
 nav {
     background-color:linear-gradient(to right #F28E85, to left #a65858);
-    padding: 50 px;
+    /* padding: 50 px; */
+    display: flex;
+    justify-content:space-evenly;
 }
-
+}
+header h1{
+    /* flex: basis 0;; */
+}
+header img{
+   width:25%;
+   /* border:5px solid var(--berry); */
+   justify-content:center;
+}
+nav ul{
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+#about{
+    padding:50px;
+}
+#projects{
+    display: flexbox;
+    /* padding-top:50px; */
+}
+#contact{
+    padding:50px;
+}
 /* 
 linkedin direct link
 
 https: //www.linkedin.com/in/aimee-darling-910847271/ */
+
+@media screen {
+    
+}
