--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,68 +1,124 @@
-:root{
-    --dark:#422f47;
-    --mauve:#a65858;
-    --berry:#bf5669;
-    --peach:#F28E85;
+:root {
+    --dark: #422f47;
+    --mauve: #a65858;
+    --berry: #bf5669;
+    --peach: #F28E85;
     --pink: #f8dcdc;
     --pink2: #f2bbbb;
-    --grad:linear-gradient(to right var(--peach), var(--berry))
+    --grad: linear-gradient(to right var(--peach), var(--berry))
 }
 
-* {
-
-background-color:var(--pink);
-color:var(--dark);
-box-sizing:border-box;    
+*{
+    background-color: var(--pink);
+    color: var(--dark);
+    box-sizing: border-box;
 }
 
 html {
     scroll-behavior: smooth;
 }
-body{
+
+body {
     font-family: Courier, monospace;
 }
-header{
-    display:flexbox;
-    padding-top:60px;
-    /* text-align:center; */
-    font-size: 50px;
-    font-family: 'brush script MT', Courier, monospace;
-    }
 
-nav {
-    background-color:linear-gradient(to right #F28E85, to left #a65858);
-    /* padding: 50 px; */
+.main-header {
+    display: flexbox;
+    flex-wrap: wrap;
+    background-color: var(--pink2);
+    padding: 20px;
+    /* margin: 50px; */
+    font-size: 60px;
+    font-family: 'brush script MT', Courier, monospace;
+    border-top: 10px solid var(--dark);
+    border-bottom: 10px solid var(--dark);
+    /* border-radius:25px;     */
+}
+
+/* .row{
+    flex-direction: row;
     display: flex;
-    justify-content:space-evenly;
+    flex-wrap: wrap;
+    
+} */
+
+nav{
+    background-color: var(--pink2);
+    /* padding: 50 px; */
 }
+
+.nav{
+        background-color: var(--pink2);
+        display:flexbox;
+        /* flex-direction: row;
+        flex-wrap: wrap; */
 }
-header h1{
+/* 
+li.nav-list{
+    flex-direction: row;
+    flex-wrap:wrap;
+} */
+
+.nav-list a{
+    flex-direction: row;
+    flex-wrap:wrap;
+    background-color:var(--pink2);
+    
+}
+a:link{
+    text-decoration: none;
+    /* flex-direction: row;
+    flex-wrap: wrap; */
+}
+
+header h1 {
+     background-color: var(--pink2);
     /* flex: basis 0;; */
 }
-header img{
-   width:25%;
-   /* border:5px solid var(--berry); */
-   justify-content:center;
-}
-nav ul{
+
+section img {
+    width: 25%;
+    border: 5px dotted var(--berry);
+    border-radius: 300px;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--pink2);
+    }
+
+.nav-list{
+    background-color: var(--pink2);
     flex-direction: row;
     justify-content: space-evenly;
 }
-#about{
-    padding:50px;
+
+#about {
+    padding: 50px;
 }
 #projects{
-    display: flexbox;
-    /* padding-top:50px; */
+    display: flex;
+    /* flex-direction: row-reverse;
+    flex-wrap: wrap; */
 }
-#contact{
-    padding:50px;
+
+figure {
+    /* display: flexbox; */
+    flex-direction: row;
+    flex-wrap: wrap;
 }
-/* 
-linkedin direct link
 
-https: //www.linkedin.com/in/aimee-darling-910847271/ */
+.project1: {
+    width:75%;
+}
 
-@media screen {
-    
+.project2 {
+    width: 25%;
+}
+
+#contact {
+    margin-top: 100px;
+}
+
+
+@media screen and (max-width: 992px){
+
 }
