--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,19 +4,19 @@
     --berry: #bf5669;
     --peach: #F28E85;
     --pink: #f8dcdc;
-    --green:#c0e6cd;
+    --green: #c0e6cd;
     --pink2: #d79c9f;
     --grad: linear-gradient(to right var(--peach), var(--berry))
 }
 
-*{
+* {
     box-sizing: border-box;
     color: var(--dark);
 }
 
 html {
     scroll-behavior: smooth;
-    /* font-size: 62.5% */
+    font-size: 62.5%
 }
 
 body {
@@ -29,74 +29,91 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: var(--pink2);
-    height: 100px;
-    padding: 10px;
-    font-size: 35px;
-    text-shadow:4px 4px 4px var(--berry);
-    border: 3px solid var(--dark);
-    border-radius: 25px;
-  }
- 
-.nav{
-    display:flex;
+    height: 10rem;
+    padding: 3rem;
+    font-size: 3rem;
+    text-shadow: .4rem .4rem .4rem var(--berry);
+    border: .3rem ridge var(--dark);
+    border-radius: 5px;
+}
+
+.nav {
+    display: flex;
     justify-content: space-evenly;
     text-decoration: none;
-   }
-
-
-.nav-list a{
-    text-decoration:none;   
-    padding:12px;
 }
 
-section img {
-    width: 25%;
-    /* border: 5px dotted var(--berry); */
-    border-radius: 10px;
-    justify-content: center;
+
+.nav-list a {
+    text-decoration: none;
+    padding: 1.2rem;
+}
+
+.about img {
+    size: 20rem;
+    border: 5px ridge var(--berry);
+    border-radius: 50%;
+    justify-content: space-between;
     align-items: center;
     background-color: var(--pink2);
-    }
+}
 
 .about {
-    display:flex;
-    padding: 50px;
-    font-size: larger;
+    display: flex;
+    padding: 5rem;
+    font-size: 2.5rem;
     justify-content: space-between;
 }
-.about div{
-display: flex;
-flex-direction: column;
-justify-content: center;
-padding: 100px;
-}
 
-.projects{
+.about div {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 5rem;
 }
 
-.projects h2{
-    font-size: 500;
+.about h2, .projects h2, .contact h2{
+text-shadow: .4rem .4rem .4rem var(--berry);
 }
 
-#project-1 {
-width: 75%;
+.projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#project-2 {
-flex:1;
+.projects h2 {
+    padding-bottom: 3rem;
+    font-size: 2.5rem;
+    /* margin: auto; */
 }
 
-#project-3{
-flex:1;
+figure #project-1 {
+    max-width: 60%;
+    height:auto;
+    border: 5px ridge var(--berry);
+    border-radius: 50%;
+    
+}
+.comingsoon {
+    display:flex;
+}
+.project-2, .project-3{
+    width:45%;
+    padding:3rem;
+    
 }
 
-#contact {
+.contact {
+    border:10px solid red;
+    display:flex;
     margin-top: 100px;
+    font-size:2.5rem;
+}
+.links {
+    text-decoration: none;
+display:flex;
 }
 
 
-@media screen and (max-width: 992px){
-
-}
+@media screen and (max-width: 992px) {}
