--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,7 @@
     --peach: #F28E85;
     --pink: #f8dcdc;
     --green: #c0e6cd;
-    --pink2: #d79c9f;
-    --grad: linear-gradient(to right var(--peach), var(--berry))
+    --pink2: hsl(357, 47%, 78%);
 }
 
 * {
@@ -43,14 +42,14 @@ body {
     text-decoration: none;
 }
 
-
-.nav-list a {
+.nav a {
     text-decoration: none;
     padding: 1.2rem;
 }
 
 .about img {
-    size: 20rem;
+    width: 40rem;
+    height: auto;
     border: 5px ridge var(--berry);
     border-radius: 50%;
     justify-content: space-between;
@@ -72,8 +71,11 @@ body {
     padding: 5rem;
 }
 
-.about h2, .projects h2, .contact h2{
-text-shadow: .4rem .4rem .4rem var(--berry);
+.about h2,
+.projects h2,
+.contact h2 {
+    text-shadow: .4rem .4rem .4rem var(--berry);
+    align-self: center;
 }
 
 .projects {
@@ -90,30 +92,44 @@ text-shadow: .4rem .4rem .4rem var(--berry);
 
 figure #project-1 {
     max-width: 60%;
-    height:auto;
+    height: auto;
     border: 5px ridge var(--berry);
     border-radius: 50%;
-    
+
 }
+
 .comingsoon {
-    display:flex;
+    display: flex;
 }
-.project-2, .project-3{
-    width:45%;
-    padding:3rem;
-    
+
+.project-2,
+.project-3 {
+    width: 45%;
+    padding: 3rem;
+
 }
 
 .contact {
-    border:10px solid red;
-    display:flex;
+    display: flex;
     margin-top: 100px;
-    font-size:2.5rem;
+    font-size: 2.5rem;
+    justify-content: space-around;
+    border: 10px solid red;
 }
+
 .links {
+    justify-items: flex-end;
     text-decoration: none;
-display:flex;
 }
 
 
-@media screen and (max-width: 992px) {}
+@media screen and (max-width: 992px) {
+    .nav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about {
+        flex-direction: column;
+    }
+}
