--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
     background-color: var(--pink);
 }
 
-.main-header {
+.main-header, #contact{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -106,15 +106,9 @@ body {
 
 }
 
-#contact {
-    display: flex;
-    margin-top: 100px;
-    font-size: 3rem;
-    justify-content: space-around;
-}
-.links li {
+.links>li {
    text-decoration: none; 
-   font-size: 2rem;
+ font-size: 2.5rem;
 }
 @media screen and (max-width: 992px) {
     header{
