--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,9 @@
 :root {
     --dark: #422f47;
-    --mauve: #a65858;
     --berry: #bf5669;
-    --peach: #F28E85;
     --pink: #f8dcdc;
     --green: #c0e6cd;
-    --pink2: hsl(357, 47%, 78%);
+    --pink2: #f3bcb8;
 }
 
 * {
@@ -47,6 +45,13 @@ body {
     padding: 1.2rem;
 }
 
+#about {
+    display: flex;
+    padding: 5rem;
+    font-size: 2.5rem;
+    justify-content: space-between;
+}
+
 #about img {
     width: 40rem;
     height: auto;
@@ -54,13 +59,6 @@ body {
     border-radius: 50%;
     justify-content: space-between;
     align-items: center;
-}
-
-#about {
-    display: flex;
-    padding: 5rem;
-    font-size: 2.5rem;
-    justify-content: space-between;
 }
 
 #about div {
@@ -112,7 +110,7 @@ body {
 }
 @media screen and (max-width: 992px) {
     header{
-        viewport-fit: 100%;
+     flex-wrap: stretch;
     }
     
     .nav {
