--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,51 +21,43 @@ body {
     background-color: var(--pink);
 }
 
-.main-header, #contact{
+.main-header,
+#contact {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: var(--pink2);
-    height: 12rem;
-    padding: 3rem;
-    font-size: 3rem;
+    height: 10rem;
+    padding: 1rem;
+    font-size: 2rem;
     text-shadow: .4rem .4rem .4rem var(--berry);
     border: .3rem ridge var(--dark);
     border-radius: 5px;
 }
 
-.nav {
-    display: flex;
-    justify-content: space-evenly;
+.nav a,
+.links>li {
     text-decoration: none;
 }
 
-.nav a {
-    text-decoration: none;
-    padding: 1.2rem;
-}
-
-#about {
+#about,
+#projects {
     display: flex;
-    padding: 5rem;
-    font-size: 2.5rem;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1rem;
 }
 
 #about img {
-    width: 40rem;
-    height: auto;
-    border: 5px ridge var(--dark);
-    border-radius: 50%;
-    justify-content: space-between;
-    align-items: center;
+    width: 25rem;
 }
 
 #about div {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding: 5rem;
+    font-size: 1.8rem;
+    padding: 3rem;
 }
 
 #about h2,
@@ -73,52 +65,71 @@ body {
 #contact h2 {
     text-shadow: .4rem .4rem .4rem var(--berry);
     align-self: center;
-    font-size:3rem;
+    font-size: 2rem;
+    padding-bottom: 1rem;
 }
 
-#projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#projects h2 {
-    padding-bottom: 3rem;
- 
-}
-
-.project-1 {
-    max-width: 60%;
+.project-1 img {
+    width: 35rem;
     height: auto;
- }
+}
 
 .comingsoon {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .project-2,
 .project-3 {
-    width: 45%;
-    padding: 3rem;
-
+    width: 18rem;
+    padding: .5rem;
+    padding-bottom: 2.5rem;
 }
 
-.links>li {
-   text-decoration: none; 
- font-size: 2.5rem;
+li>a {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
 }
-@media screen and (max-width: 992px) {
-    header{
-     flex-wrap: stretch;
+
+@media screen and (min-width: 992px) {
+
+    .main-header,
+    #contact {
+        height: 10rem;
+        font-size: 3rem;
+        justify-content: space-between;
+        padding: 5rem 10rem;
     }
-    
-    .nav {
+
+    #about {
+        flex-direction: row;
+        padding: 5rem 25rem;
+    }
+
+    #about h2,
+    #projects h2,
+    #contact h2 {
+        font-size: 3rem;
+    }
+
+    li>a {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        text-decoration: none;
+        font-size: 2.5rem;
+        padding-right: 1rem;
     }
 
-    .about {
-        flex-direction: column;
+    .project-1 img {
+        width: 65rem;
     }
+
+    .project-2,
+    .project-3 {
+        width: 34.5rem;
+        padding: 1rem;
+        padding-bottom: 5rem;
+    }
+
 }
